<resources>
    <string name="application_name" translatable="false">Skred</string>
    <string name="google_api_key" translatable="false">AIzaSyBXd4r52k4LblffUoeCgCARt2R_5QrI9l0</string>
    <string name="google_app_id" translatable="false">1:212928992788:android:c93e9c7363a20628</string>
    <string name="google_maps_key" translatable="false">AIzaSyCMELuNwuz6WPGGHNC7uEoBSiKzMBGLdQE</string>
    <string name="project_id" translatable="false">skred-2584f</string>
    <string name="skred_app_id" translatable="false">mobi.skred.app</string>
    <string name="skred_blog" translatable="false">https://www.skred.app/blog/</string>
    <string name="skred_faq" translatable="false">https://skred.mobi/support</string>
    <string name="application_accept">Accept</string>
    <string name="application_account_deleted">Your account has been deleted, you must now uninstall the application.</string>
    <string name="application_account_restored_error">This device\'s account has been restored to another device. You need to uninstall the app.</string>
    <string name="application_add_contact_no_profile">You must complete a profile that represents you, before inviting a contact. Proceed?</string>
    <string name="application_all">All</string>
    <string name="application_appearance">Appearance</string>
    <string name="application_are_you_sure">Are you sure?</string>
    <string name="application_authorization_location">Allow app to access Location in system settings.</string>
    <string name="application_authorization_camera">Allow app to access Camera in system settings.</string>
    <string name="application_authorization_go_settings">Go to system settings</string>
    <string name="application_authorization_microphone">Allow app to access Microphone in system settings.</string>
    <string name="application_authorization_microphone_camera">Allow app to access Microphone and Camera in system settings.</string>
    <string name="application_authorization_title">Missing access authorization</string>
    <string name="application_beta" translatable="false">BETA</string>
    <string name="application_back">Back</string>
    <string name="application_backup_restore">Restore the backup</string>
    <string name="application_backup_verify">Verify the backup</string>
    <string name="application_camera">Camera</string>
    <string name="application_cancel">Cancel</string>
    <string name="application_canceled_operation">Canceled operation</string>
    <string name="application_checking_connection">Checking connection</string>
    <string name="application_color">Color</string>
    <string name="application_configuration">Configuration</string>
    <string name="application_confirm">Confirm</string>
    <string name="application_confirm_deletion">Confirm the deletion</string>
    <string name="application_connected">Secure connection enabled.</string>
    <string name="application_connection_status_no_network">No Internet access.</string>
    <string name="application_connection_status_no_network_message">Check your network connection.</string>
    <string name="application_connection_status_no_services">No access to the service.</string>
    <string name="application_connection_status_no_services_message">Try using a VPN.</string>
    <string name="application_contact_not_found">This contact has deleted this relation with you and is no longer reachable.</string>
    <string name="application_continue_without_premium_services">Continue without premium services</string>
    <string name="application_create_group_no_profile">You must complete a profile that represents you in this group. Proceed?</string>
    <string name="application_database_error">Database error</string>
    <string name="application_decline">Decline</string>
    <string name="application_default">Default</string>
    <string name="application_delete">Delete</string>
    <string name="application_delete_message">Are you sure you want to delete it?</string>
    <string name="application_denied_permissions">Required permissions are not granted</string>
    <string name="application_description">Description</string>
    <string name="application_display_all">Display all</string>
    <string name="application_do_not_display">Do not display anymore</string>
    <string name="application_duration_hour">h</string>
    <string name="application_duration_minute">m</string>
    <string name="application_duration_second">s</string>
    <string name="application_edit">Edit</string>
    <string name="application_error_code">Error code: %1$s</string>
    <string name="application_error_file_not_found">The file was not found.</string>
    <string name="application_error_media_unload">Unable to load media.</string>
    <string name="application_error_media_not_supported">This image/video format is not supported by the application.</string>
    <string name="application_error_no_storage_space">Insufficient storage space</string>
    <string name="application_group_limit_reached">Maximum number (%1$d) of group members exceeded.</string>
    <string name="application_group_not_found">You have been removed from the group</string>
    <string name="application_later">Later</string>
    <string name="application_location">Geolocation</string>
    <string name="application_location_enabled">Activate Location service on your device.</string>
    <string name="application_items_selected">%1$d items selected</string>
    <string name="application_low_usage_message">Warning, if you don’t use the application often enough, the OS may not wake it up to exchange messages!</string>
    <string name="application_one_item_selected">1 item selected</string>
    <string name="application_migration_no_storage_space">There is not enough space on your device to complete the migration. Close the application, free up some space, and relaunch the app to complete the update.</string>
    <string name="application_migration_no_storage_space_message">One of the two devices does not have enough storage space. Free up space on that device before restarting the migration.</string>
    <string name="application_more_info">More information…</string>
    <string name="application_name_hint">Name</string>
    <string name="application_network_connecting">Connecting to Skred service</string>
    <string name="application_network_connectivity">Network connectivity exists</string>
    <string name="application_network_status_airplane_message">Airplane mode is activated.</string>
    <string name="application_network_status_airplane_resolution">Please, disable Airplane mode and connect to a Wi-Fi or mobile network.</string>
    <string name="application_network_status_connected_no_internet">No network access to the Skred service.</string>
    <string name="application_network_status_connected_resolution">Try to connect to another network.</string>
    <string name="application_network_status_connection_timeout">Cannot establish the Internet connection.</string>
    <string name="application_network_status_no_internet">No Internet connection.</string>
    <string name="application_network_status_wifi_disabled">Wi-Fi is disabled.</string>
    <string name="application_network_status_wifi_disabled_no_mobile">Wi-Fi is disabled and there is no mobile Internet connection.</string>
    <string name="application_network_status_wifi_disabled_no_mobile_resolution">Please, turn on Wi-Fi.</string>
    <string name="application_network_status_wifi_disabled_resolution">Please, turn on Wi-Fi or activate a mobile Internet connection.</string>
    <string name="application_new" translatable="false"> New! </string>
    <string name="application_new_feature">New!</string>
    <string name="application_no">No</string>
    <string name="application_no_network_connectivity">No network connectivity</string>
    <string name="application_no_service">No service</string>
    <string name="application_not_authorized_operation">Not authorized operation</string>
    <string name="application_not_authorized_operation_by_your_contact">Operation not authorized by your contact.</string>
    <string name="application_not_connected">Secure connection in progress…</string>
    <string name="application_not_signed_in">Not connected to Skred service</string>
    <string name="application_now">Now</string>
    <string name="application_off" translatable="false">Off</string>
    <string name="application_ok">OK</string>
    <string name="application_on" translatable="false">On</string>
    <string name="application_operation_failure">Operation failure</string>
    <string name="application_operation_irreversible">This operation is irreversible</string>
    <string name="application_permission_camera">Permission to access the camera is required to take a new photo or video.</string>
    <string name="application_permission_scan_code">Permission to access the camera is necessary to scan a QR code.</string>
    <string name="application_premium_feature_message">You must activate premium services to use this feature.</string>
    <string name="application_premium_feature_title">Activate premium services</string>
    <string name="application_photo_gallery">Photo albums</string>
    <string name="application_processing_please_wait">Processing… Please wait.</string>
    <string name="application_profile">Profile</string>
    <string name="application_profile_avatar_not_defined">You need to enter the image that represents you to the contacts you invite with this profile.</string>
    <string name="application_profile_name_not_defined">You need to define the name that represents you to the contacts you invite with this profile.</string>
    <string name="application_remove">Remove</string>
    <string name="application_save">Save</string>
    <string name="application_search_hint">Search</string>
    <string name="application_select">Select</string>
    <string name="application_select_application">Select application</string>
    <string name="application_select_more">Select more…</string>
    <string name="application_server_timeout">Server timeout</string>
    <string name="application_size_unit">MB</string>
    <string name="application_start">Start</string>
    <string name="application_theme">Theme</string>
    <string name="application_timeout">Timeout</string>
    <string name="application_timeout_day">1 day</string>
    <string name="application_timeout_hour">1 hour</string>
    <string name="application_timeout_hours">%1$d hours</string>
    <string name="application_timeout_minute">1 minute</string>
    <string name="application_timeout_minutes">%1$d minutes</string>
    <string name="backup_view_content">Contents</string>
    <string name="backup_view_content_info">Backups do not include conversations, notifications, and history.</string>
    <string name="calls_view_title">Calls</string>
    <string name="call_view_quality_message">How would you rate it?</string>
    <string name="call_view_quality_title">Call quality</string>
    <string name="cleanup_view_expiration">Expiration terms</string>
    <string name="contacts_view_title">Contacts</string>
    <string name="conversations_view_title">Conversations</string>
    <string name="deleted_account_view_warning">Warning‼️</string>
    <string name="edit_profile_view_propagating_ask_message">Propagate the image, name, or description you just modified:</string>
    <string name="edit_profile_view_propagating_message">You can propagate your invitation profile changes to your existing contacts, or not.</string>
    <string name="feedback_view_send">Send</string>
    <string name="invitation_code_view_success_message">It is strongly recommended to certify relations established with a Mini-Code to reinforce their security.</string>
    <string name="notifications_view_title">Notifications</string>
    <string name="restore_view_warning">Restoring this backup will replace all current account data with the data from the backup.</string>
</resources>