<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calls"
        android:icon="@drawable/tab_bar_calls_icon"
        android:title=""
        android:contentDescription="@string/calls_view_title" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/tab_bar_contacts_icon"
        android:title=""
        android:contentDescription="@string/contacts_view_title" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/tab_bar_chat_icon"
        android:title=""
        android:contentDescription="@string/conversations_view_title" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tab_bar_notifications_icon"
        android:title=""
        android:contentDescription="@string/notifications_view_title" />

</menu>