<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/invitation_code_share_view_overlay_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/invitation_code_share_view_action_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <View
            android:id="@+id/invitation_code_share_view_slide_mark_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/invitation_code_share_view_code_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/invitation_code_share_view_slide_mark_view"
            android:gravity="center"
            android:lines="1" />

        <TextView
            android:id="@+id/invitation_code_share_view_message_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/invitation_code_share_view_code_view"
            android:gravity="center"
            android:text="@string/invitation_code_view_success_message" />

        <RelativeLayout
            android:id="@+id/invitation_code_share_view_confirm_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/invitation_code_share_view_message_view">

            <TextView
                android:id="@+id/invitation_code_share_view_confirm_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/application_confirm" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/invitation_code_share_view_cancel_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/invitation_code_share_view_confirm_view">

            <TextView
                android:id="@+id/invitation_code_share_view_cancel_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/application_cancel" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>