<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/menu_expiration_view_overlay_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/menu_expiration_view_action_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <View
            android:id="@+id/menu_expiration_view_slide_mark_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/menu_expiration_view_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/cleanup_view_expiration"
            android:layout_below="@+id/menu_expiration_view_slide_mark_view" />

        <org.twinlife.twinme.ui.conversationFilesActivity.CustomTabView
            android:id="@+id/menu_expiration_view_tab_view"
            android:layout_below="@+id/menu_expiration_view_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menu_expiration_view_list_view"
            android:layout_below="@+id/menu_expiration_view_tab_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/menu_expiration_view_confirm_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu_expiration_view_list_view">

            <TextView
                android:id="@+id/menu_expiration_view_confirm_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/application_save" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_expiration_view_cancel_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/menu_expiration_view_confirm_view">

            <TextView
                android:id="@+id/menu_expiration_view_cancel_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/application_cancel" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>