<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/call_quality_view_overlay_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/call_quality_view_action_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <View
            android:id="@+id/call_quality_view_slide_mark_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/call_quality_view_stars_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/call_quality_view_slide_mark_view"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/call_quality_view_star_one_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/star_grey"/>

            <ImageView
                android:id="@+id/call_quality_view_star_two_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:layout_toEndOf="@+id/call_quality_view_star_one_image_view"
                android:src="@drawable/star_grey"/>

            <ImageView
                android:id="@+id/call_quality_view_star_three_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:layout_toEndOf="@+id/call_quality_view_star_two_image_view"
                android:src="@drawable/star_grey"/>

            <ImageView
                android:id="@+id/call_quality_view_star_four_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:layout_toEndOf="@+id/call_quality_view_star_three_image_view"
                android:src="@drawable/star_grey"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/call_quality_view_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/call_quality_view_stars_view"
            android:gravity="center"
            android:text="@string/call_view_quality_title" />

        <TextView
            android:id="@+id/call_quality_view_message_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/call_quality_view_title_view"
            android:gravity="center"
            android:text="@string/call_view_quality_message" />

        <RelativeLayout
            android:id="@+id/call_quality_view_confirm_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/call_quality_view_message_view">

            <TextView
                android:id="@+id/call_quality_view_confirm_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/feedback_view_send" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/call_quality_view_cancel_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/call_quality_view_confirm_view">

            <TextView
                android:id="@+id/call_quality_view_cancel_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/application_cancel" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>